@@ -39,8 +39,10 @@ mosaicplot(x, \dots)
     default consists of alternating directions, beginning with a
     vertical split.}
   \item{color}{logical or (recycling) vector of colors for color
-    shading, used only when \code{shade} is \code{FALSE}.  The default
-    \code{color=FALSE} gives empty boxes with no shading.}
+    shading, used only when \code{shade} is \code{FALSE}, or \code{NULL}
+    (default).  By default, grey boxes are drawn.  \code{color=TRUE}
+    uses a gamma-corrected grey palette.  \code{color=FALSE} gives empty
+    boxes with no shading.}
   \item{shade}{a logical indicating whether to produce extended mosaic
     plots, or a numeric vector of at most 5 distinct positive numbers
     giving the absolute values of the cut points for the residuals.  By
